# libmodernimage

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  README_ja.md  THIRD_PARTY_LICENSES  usecase-binding.md
.github/workflows/: release.yml  test-windows.yml  test.yml
include/: modernimage.h
scripts/: build-deps.sh  build.sh  generate-cli-compat.sh  localize-symbols.sh  package.sh
src/: bridge_avifenc.c  bridge_cwebp.c  bridge_gif2webp.c  bridge_jpegtran.c  cache.c  cache.h  engine_avifenc.c  engine_avifenc.h  engine_cwebp.c  engine_cwebp.h  jpeg_orientation.c  modernimage.c  modernimage_internal.h
tests/: test_binary_equiv.c  test_fat_link.c  test_jpeg_orientation.c  test_pipe_drain.c  test_thread_safety.c
